# yolt

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
packaging/homebrew-tap/: README.md
packaging/homebrew-tap/Formula/: yolt.rb
spec/: README.md  backup-store.md  cli.md  config.md  distribution.md  ignore-rules.md  product.md  retention.md  testing.md  watcher.md
src/: backup.rs  config.rs  ignore_rules.rs  lib.rs  main.rs  project.rs  restore.rs  retention.rs  watcher.rs
tests/: restore_test.rs  retention_test.rs
